[tool.poetry]
name = "step-one"
version = "0.1.0"
description = ""
authors = ["David Corbitt <davidlcorbitt@gmail.com>"]
readme = "README.md"
packages = [{include = "step_one"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.21.2"
tiktoken = "^0.6.0"
ray = "2.11.0"
praw = "^7.6.1"
appdirs = "^1.4.4"
streamlit = "^1.19.0"
grpcio = "^1.62.1"
openpipe = "^4.9.0"
instructor = "^1.2.1"
pydantic = "^2.7.0"

[tool.poetry.scripts]
step-one = "step_one.find:find_posts"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
